tests/fixtures/invalid/bytes_lshift_bytes.py
# Cannot left shift Bytes and Bytes
x: bytes = b"hello" << b"hello"
